2010-06-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12383: Append suffix depending on GETvars
	* Fixed bug #14576: Add a flag to the page to exclude it from RealURL caches

2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14381: 404 Handling throws a 500 error
	* Fixed bug #14414: wrong behavior with Exclude from speaking URL setting (thanks to Vladimir Podkovanov)
	* Fixed bug #12904: Exclude from speaking URL
	* Fixed bug #14111: tx_realurl::lookUp_cleanAlias() could be used in user functions but is protected since v1.8.0
	* Fixed bug #14261: Error Log in BE use wrong DomainName
	* Fixed bug #14266: set as redirect does not work
	* Fixed bug #14552: Path cache is not used in some cases
	* Fixed bug #14200: after logging out from BE realurl stops working on some pages
	* Fixed bug #14300: FileName option does not drop used parameters
	* Fixed bug #14321: If page title is empty, fall back to the uid of the page for path generation
	* Fixed bug #10073: If page title is empty, RealURL generates path to the upper page
	* Fixed bug #7825: Alias change does not change paths in non–default language
	* Fixed bug #4481: after page a page is deleted it remains in the pathcache

2010-04-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14031: RealURL 1.8.0 floods sys_log with error messages: tx_realurl::encodeSpURL_urlPrepend is no valid callback
	* Fixed bug #13966: RealUrl uses t3lib_div::fixed_lgd() which is deprecated
	* Added a note to the manual that _DEFAULT must not be used in multidomain configurations
	* Recreate TCEmain hook to clean/expire path entries
	* Refactor and simplify insertion/updates in the path cache
	* Released version 1.8.1

2010-04-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed duplicate code

2010-04-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.8.0

2010-03-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13918: Autoconf breaks SimulateStatic-URLs
